<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mario.myapplication.MainActivity"
    android:orientation="vertical"

    android:gravity="center"
    android:background="#a6a6a6"
    android:baselineAligned="false"
    android:weightSum="1">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:rowCount="7"
        android:columnCount="5"
        android:layout_gravity="center"


        >

        <Button
            android:layout_column="1"
            android:layout_columnSpan="4"
            android:layout_row="0"
            android:id="@+id/Start"
            android:text="@string/Start"
            android:onClick="eventoStart"
            android:layout_width="260dp"
            android:enabled="true"
            android:focusable="false"
            android:background="#19bf1c"
            android:textColor="#fcfcfc" />


        <Space
            android:layout_row="1"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_columnSpan="5"/>


        <Button
            android:layout_column="2"
            android:layout_row="2"
            android:id="@+id/boton1"
            android:text="@string/Boton1"
            android:background="#ffffff"
            android:onClick="evento1"/>
        <Button
            android:layout_column="3"
            android:layout_row="2"
            android:id="@+id/boton2"
            android:text="@string/Boton2"
            android:background="#ffffff"
            android:onClick="evento2"/>



        <Space
            android:layout_row="3"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_columnSpan="5"/>




        <Button
            android:layout_column="1"
            android:layout_row="4"
            android:id="@+id/boton3"
            android:text="@string/Boton3"
            android:background="#ffffff"
            android:onClick="evento3"/>
        <Button
            android:layout_column="2"
            android:layout_row="4"
            android:id="@+id/boton4"
            android:text="@string/Boton4"
            android:background="#ffffff"
            android:onClick="evento4"/>
        <Button
            android:layout_column="3"
            android:layout_row="4"
            android:id="@+id/boton5"
            android:text="@string/Boton5"
            android:background="#ffffff"
            android:onClick="evento5"/>




        <Space
            android:layout_row="5"
            android:layout_height="30dp"
            android:layout_column="0"
            android:layout_columnSpan="5"
            />




        <Button
            android:layout_column="1"
            android:layout_row="6"
            android:id="@+id/boton6"
            android:text="@string/Boton6"
            android:background="#ffffff"
            android:onClick="evento6"/>
        <Button
            android:layout_column="2"
            android:layout_row="6"
            android:id="@+id/boton7"
            android:text="@string/Boton7"
            android:background="#ffffff"
            android:onClick="evento7"/>
        <Button
            android:layout_column="3"
            android:layout_row="6"
            android:id="@+id/boton8"
            android:text="@string/Boton8"
            android:background="#ffffff"
            android:onClick="evento8"/>

        <Button
            android:layout_column="1"
            android:layout_row="2"
            android:id="@+id/boton0"
            android:text="@string/Boton0"
            android:background="#ffffff"
            android:onClick="evento0"/>

    </GridLayout>

    <Button
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:id="@+id/botonV"
        android:elevation="0dp"
        android:text="Comprobar"
        android:onClick="eventoComprobar"
        android:background="#19bf1c"
        android:textColor="#fcfcfc" />



</LinearLayout>
